carbon-update: carbon can be v2

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "php": ">=7.1.0",
     "ext-json": "*",
     "laravel/framework": ">=5.6",
-    "nesbot/carbon": "1.*",
+    "nesbot/carbon": ">=1.0",
     "tochka-developers/laravel-job-visibility": "^0.4"
   },
   "extra": {
