--- a/composer.json
+++ b/composer.json
@@ -10,23 +10,19 @@
   ],
   "autoload": {
     "psr-4": {
-      "Tochka\\Queue\\Promises\\": "src/"
-    },
-    "files": [
-      "src/helpers.php"
-    ]
+      "Tochka\\Promises\\": "src/"
+    }
   },
   "require": {
-    "php": ">=7.1.0",
+    "php": "^7.3",
     "ext-json": "*",
-    "laravel/framework": ">=5.6",
-    "nesbot/carbon": ">=1.0",
-    "tochka-developers/laravel-job-visibility": "^0.4"
+    "laravel/framework": "5.8|^6.0",
+    "nesbot/carbon": ">=1.0"
   },
   "extra": {
     "laravel": {
       "providers": [
-        "Tochka\\Queue\\Promises\\QueuePromisesServiceProvider"
+        "Tochka\\Promises\\PromisesServiceProvider"
       ]
     }
   }
