Save initial state to database

--- a/composer.json
+++ b/composer.json
@@ -14,15 +14,15 @@
     }
   },
   "require": {
-    "php": "^7.3",
+    "php": "^7.4",
     "ext-json": "*",
     "laravel/framework": "5.8|^6.0",
-    "nesbot/carbon": ">=1.0"
+    "nesbot/carbon": ">=2.0"
   },
   "extra": {
     "laravel": {
       "providers": [
-        "Tochka\\Promises\\PromisesServiceProvider"
+        "Tochka\\Promises\\PromiseServiceProvider"
       ]
     }
   }
