--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,11 @@
     "php": "^7.3",
     "ext-json": "*",
     "laravel/framework": "5.8|^6.0",
-    "nesbot/carbon": ">=2.0"
+    "nesbot/carbon": ">=2.0",
+    "bensampo/laravel-enum": "^1.28"
+  },
+  "require-dev": {
+    "roave/security-advisories": "dev-master"
   },
   "extra": {
     "laravel": {
