--- a/composer.json
+++ b/composer.json
@@ -8,14 +8,6 @@
       "email": "darkdarin@tochka.com"
     }
   ],
-  "autoload": {
-    "files": [
-      "src/helpers.php"
-    ],
-    "psr-4": {
-      "Tochka\\Promises\\": "src/"
-    }
-  },
   "require": {
     "php": "^7.3",
     "ext-json": "*",
@@ -24,13 +16,28 @@
     "bensampo/laravel-enum": "^1.28"
   },
   "require-dev": {
-    "roave/security-advisories": "dev-master"
+    "roave/security-advisories": "dev-master",
+    "phpunit/phpunit": "^8.0",
+    "mockery/mockery": "^1.0"
   },
   "extra": {
     "laravel": {
       "providers": [
         "Tochka\\Promises\\PromiseServiceProvider"
       ]
+    }
+  },
+  "autoload": {
+    "files": [
+      "src/helpers.php"
+    ],
+    "psr-4": {
+      "Tochka\\Promises\\": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Tochka\\JsonRpc\\Tests\\": "tests/"
     }
   }
 }
