--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,5 +13,5 @@ sonar.language=php
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
 
-sonar.php.coverage.reportPaths=coverage-report.clover
-sonar.php.tests.reportPath=test-report.xml
+#sonar.php.coverage.reportPaths=coverage-report.clover
+#sonar.php.tests.reportPath=test-report.xml
