--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 language: php
+git:
+  depth: false
+install:
+  - composer require ${FRAMEWORK}
 env:
   - FRAMEWORK="laravel/framework:5.8.*"
   - FRAMEWORK="laravel/framework:6.*"
@@ -6,15 +10,10 @@ env:
 php:
   - '7.3'
   - '7.4'
+script: "vendor/bin/phpunit --coverage-clover=coverage-report.clover --log-junit=test-report.xml"
+
 jobs:
   include:
-    - stage: test
-      install:
-        - composer require ${FRAMEWORK}
-      git:
-        depth: false
-      script:
-        - vendor/bin/phpunit --coverage-clover=coverage-report.clover --log-junit=test-report.xml
     - stage: "Sonar Analyze"
       dist: trusty
       addons:
