--- a/composer.json
+++ b/composer.json
@@ -1,43 +1,43 @@
 {
-  "name": "tochka-developers/queue-promises",
-  "description": "Promises for Laravel queue jobs",
-  "type": "package",
-  "authors": [
-    {
-      "name": "Babushkin Pavel",
-      "email": "darkdarin@tochka.com"
-    }
-  ],
-  "require": {
-    "php": "^7.3",
-    "ext-json": "*",
-    "laravel/framework": "5.8.*|^6.0",
-    "nesbot/carbon": ">=2.0",
-    "bensampo/laravel-enum": "^1.28"
-  },
-  "require-dev": {
-    "roave/security-advisories": "dev-master",
-    "phpunit/phpunit": "^8.0",
-    "mockery/mockery": "^1.0"
-  },
-  "extra": {
-    "laravel": {
-      "providers": [
-        "Tochka\\Promises\\PromiseServiceProvider"
-      ]
-    }
-  },
-  "autoload": {
-    "files": [
-      "src/helpers.php"
+    "name": "tochka-developers/queue-promises",
+    "description": "Promises for Laravel queue jobs",
+    "type": "package",
+    "authors": [
+        {
+            "name": "Babushkin Pavel",
+            "email": "darkdarin@tochka.com"
+        }
     ],
-    "psr-4": {
-      "Tochka\\Promises\\": "src/"
+    "require": {
+        "php": "^7.3",
+        "ext-json": "*",
+        "laravel/framework": "^6.0|^7.0",
+        "nesbot/carbon": ">=2.0",
+        "bensampo/laravel-enum": "^1.28"
+    },
+    "require-dev": {
+        "roave/security-advisories": "dev-master",
+        "phpunit/phpunit": "^8.0",
+        "mockery/mockery": "^1.0"
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Tochka\\Promises\\PromiseServiceProvider"
+            ]
+        }
+    },
+    "autoload": {
+        "files": [
+            "src/helpers.php"
+        ],
+        "psr-4": {
+            "Tochka\\Promises\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tochka\\JsonRpc\\Tests\\": "tests/"
+        }
     }
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "Tochka\\JsonRpc\\Tests\\": "tests/"
-    }
-  }
 }
