--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,13 @@
     "require": {
         "php": "^7.3",
         "ext-json": "*",
-        "laravel/framework": "^7.0",
+        "laravel/framework": "^7.0|^8.0",
         "nesbot/carbon": ">=2.0",
-        "bensampo/laravel-enum": "^2.1"
+        "bensampo/laravel-enum": "^2.1|^3.0"
     },
     "require-dev": {
         "roave/security-advisories": "dev-master",
-        "phpunit/phpunit": "^8.0",
+        "phpunit/phpunit": "^8.0|^9.0",
         "mockery/mockery": "^1.0"
     },
     "extra": {
