--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ script: "vendor/bin/phpunit --no-coverage"
 jobs:
   include:
     - stage: "Sonar Analyze"
-      dist: trusty
+      dist: xenial
       php: 7.4
       env: FRAMEWORK="laravel/framework:7.*"
       install:
