--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "php": "^7.3",
         "ext-json": "*",
         "laravel/framework": "^7.0|^8.0",
-        "nesbot/carbon": ">=2.0",
+        "nesbot/carbon": "^2.0",
         "bensampo/laravel-enum": "^2.1|^3.0"
     },
     "require-dev": {
