--- a/.travis.yml
+++ b/.travis.yml
@@ -7,14 +7,12 @@ install:
   - composer require ${FRAMEWORK}
 
 env:
-  - FRAMEWORK="laravel/framework:7.*"
   - FRAMEWORK="laravel/framework:8.*"
 
 php:
-  - '7.3'
   - '7.4'
 
-script: "vendor/bin/phpunit --no-coverage"
+script: "vendor/bin/phpunit --no-coverage --configuration phpunit.xml"
 
 jobs:
   include:
