--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ script:
 jobs:
   include:
     - stage: "Sonar Analyze"
-      dist: xenial
+      dist: focal
       php: 7.4
       env: FRAMEWORK="laravel/framework:8.*"
       workspaces:
