--- a/.travis.yml
+++ b/.travis.yml
@@ -1,29 +1,31 @@
+os: linux
 dist: focal
 language: php
-stage: "Tests"
 git:
   depth: false
-install:
-  - pecl install pcov
-  - composer require ${FRAMEWORK}
-workspaces:
-  create:
-    name: coverage-report
-    paths:
-      - coverage-report.clover
 
 env:
+  - FRAMEWORK="laravel/framework:7.*"
   - FRAMEWORK="laravel/framework:8.*"
 php:
   - '7.4'
 
-script:
-  - php -d pcov.enabled=1 vendor/bin/phpunit --coverage-clover=coverage-report.clover
-
 jobs:
   include:
-    - stage: "Tests"
-    - stage: "Sonar Analyze"
+    - stage: test
+      name: "Tests"
+      install:
+        - pecl install pcov
+        - composer require ${FRAMEWORK}
+      workspaces:
+        create:
+          name: coverage-report
+          paths:
+            - coverage-report.clover
+      script:
+        - php -d pcov.enabled=1 vendor/bin/phpunit --coverage-clover=coverage-report.clover
+    - stage: analize
+      name: "Sonar Analyze"
       dist: focal
       workspaces:
         use: coverage-report
