--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,10 @@
     "require": {
         "php": "^7.4|^8.0",
         "ext-json": "*",
+        "bensampo/laravel-enum": "^2.1|^3.0",
+        "fntneves/laravel-transactional-events": "^1.8|^2.0",
         "laravel/framework": "^8.0",
-        "nesbot/carbon": "^2.0",
-        "bensampo/laravel-enum": "^2.1|^3.0"
+        "nesbot/carbon": "^2.0"
     },
     "require-dev": {
         "roave/security-advisories": "dev-master",
