--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,13 @@
             "email": "darkdarin@tochka.com"
         }
     ],
+    "keywords": [
+        "queue",
+        "promise",
+        "async",
+        "job",
+        "laravel"
+    ],
     "require": {
         "php": "^7.4|^8.0",
         "ext-json": "*",
@@ -17,7 +24,7 @@
         "nesbot/carbon": "^2.0"
     },
     "require-dev": {
-        "roave/security-advisories": "dev-master",
+        "roave/security-advisories": "dev-latest",
         "phpunit/phpunit": "^8.0|^9.0",
         "mockery/mockery": "^1.0",
         "orchestra/testbench": "^6.13"
