--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "require": {
         "php": "^7.4|^8.0",
         "ext-json": "*",
+        "ext-pcntl": "*",
         "bensampo/laravel-enum": "^2.1|^3.0",
         "fntneves/laravel-transactional-events": "^1.8|^2.0",
         "laravel/framework": "^8.0",
