* feat: Laravel 9 support

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,11 @@ git:
 stage: test
 env:
   - FRAMEWORK="laravel/framework:8.*"
+  - FRAMEWORK="laravel/framework:9.*"
 php:
   - '7.4'
   - '8.0'
-  - '8.1'
+  - '8.1.2'
 workspaces:
   create:
     name: coverage-report
@@ -23,11 +24,14 @@ script:
   - php -d pcov.enabled=1 vendor/bin/phpunit --coverage-clover=coverage-report.clover
 
 jobs:
+  exclude:
+    - php: 7.4
+      env: FRAMEWORK="laravel/framework:9.*"
   include:
     - stage: deploy
       name: "Sonar Analyze"
       php:
-        - '7.4'
+        - '8.0'
       env:
         - FRAMEWORK=none
       workspaces:
