--- a/composer.json
+++ b/composer.json
@@ -19,17 +19,19 @@
         "php": "^7.4|^8.0",
         "ext-json": "*",
         "ext-pcntl": "*",
-        "bensampo/laravel-enum": "^2.1|^3.0|^4.0",
+        "bensampo/laravel-enum": "^2.1|^3.0|^4.0|^5.0",
         "fntneves/laravel-transactional-events": "^1.8|^2.0",
-        "laravel/framework": "^8.0",
+        "laravel/framework": "^8.0|^9.0",
         "nesbot/carbon": "^2.0"
     },
     "require-dev": {
         "roave/security-advisories": "dev-latest",
         "phpunit/phpunit": "^8.0|^9.0",
         "mockery/mockery": "^1.0",
-        "orchestra/testbench": "^6.13"
+        "orchestra/testbench": "^6.13|^7.1"
     },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "extra": {
         "laravel": {
             "providers": [
