--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "nesbot/carbon": "^2.0"
     },
     "require-dev": {
+        "laravel/pint": "^1.1",
         "roave/security-advisories": "dev-latest",
         "phpunit/phpunit": "^8.0|^9.0",
         "mockery/mockery": "^1.0",
