--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "laravel"
     ],
     "require": {
-        "php": "^7.4|^8.0",
+        "php": "8.1.*|8.2.*",
         "ext-json": "*",
         "ext-pcntl": "*",
         "bensampo/laravel-enum": "^2.1|^3.0|^4.0|^5.0",
@@ -25,10 +25,12 @@
         "nesbot/carbon": "^2.0"
     },
     "require-dev": {
-        "roave/security-advisories": "dev-latest",
-        "phpunit/phpunit": "^8.0|^9.0",
+        "laravel/pint": "^1.4",
         "mockery/mockery": "^1.0",
-        "orchestra/testbench": "^6.13|^7.1"
+        "orchestra/testbench": "^6.13|^7.1",
+        "phpunit/phpunit": "^8.0|^9.0",
+        "roave/security-advisories": "dev-latest",
+        "vimeo/psalm": "^5.6"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
@@ -51,5 +53,10 @@
         "psr-4": {
             "Tochka\\Promises\\Tests\\": "tests/"
         }
+    },
+    "scripts": {
+        "lint": "php8.1 vendor/bin/pint --test",
+        "lint-fix": "php8.1 vendor/bin/pint",
+        "analyze": "php8.1 vendor/bin/psalm --php-version=8.1 --no-cache"
     }
 }
