--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "ext-pcntl": "*",
         "bensampo/laravel-enum": "^2.1|^3.0|^4.0|^5.0",
         "fntneves/laravel-transactional-events": "^1.8|^2.0",
-        "laravel/framework": "^8.0|^9.0",
+        "laravel/framework": "^v8.37|^9.0",
         "nesbot/carbon": "^2.0"
     },
     "require-dev": {
