--- a/composer.json
+++ b/composer.json
@@ -19,15 +19,15 @@
         "php": "8.1.*|8.2.*",
         "ext-json": "*",
         "ext-pcntl": "*",
-        "bensampo/laravel-enum": "^2.1|^3.0|^4.0|^5.0",
+        "bensampo/laravel-enum": "^2.1|^3.0|^4.0|^5.0|^6.0",
         "fntneves/laravel-transactional-events": "^1.8|^2.0",
-        "laravel/framework": "^v8.37|^9.0",
+        "laravel/framework": "^v8.37|^9.0|^10.0",
         "nesbot/carbon": "^2.0"
     },
     "require-dev": {
         "laravel/pint": "^1.4",
         "mockery/mockery": "^1.0",
-        "orchestra/testbench": "^6.13|^7.1",
+        "orchestra/testbench": "^6.13|^7.1|^8.0",
         "phpunit/phpunit": "^8.0|^9.0",
         "roave/security-advisories": "dev-latest",
         "vimeo/psalm": "^5.6"
