--- a/composer.json
+++ b/composer.json
@@ -16,15 +16,15 @@
         "laravel"
     ],
     "require": {
-        "php": "8.1.*|8.2.*",
+        "php": "8.1.*|8.2.*|8.3.*",
         "ext-json": "*",
         "ext-pcntl": "*",
         "bensampo/laravel-enum": "^2.1|^3.0|^4.0|^5.0|^6.0",
         "laravel/framework": "^v8.37|^9.0|^10.0",
-        "nesbot/carbon": "^2.0"
+        "nesbot/carbon": "^2.0|^3.0"
     },
     "require-dev": {
-        "laravel/pint": "^1.4",
+        "laravel/pint": "^1.16",
         "mockery/mockery": "^1.0",
         "orchestra/testbench": "^6.13|^7.1|^8.0",
         "phpunit/phpunit": "^8.0|^9.0",
@@ -56,6 +56,8 @@
     "scripts": {
         "lint": "php8.1 vendor/bin/pint --test",
         "lint-fix": "php8.1 vendor/bin/pint",
-        "analyze": "php8.1 vendor/bin/psalm --php-version=8.1 --no-cache"
+        "analyze": "php8.1 vendor/bin/psalm --php-version=8.1 --no-cache",
+        "pint": "vendor/bin/pint",
+        "psalm": "vendor/bin/psalm --no-cache --threads=8 --output-format=phpstorm"
     }
 }
