--- a/composer.json
+++ b/composer.json
@@ -25,14 +25,12 @@
     },
     "require-dev": {
         "laravel/pint": "^1.16",
-        "mockery/mockery": "^1.0",
+        "mockery/mockery": "^1.6",
         "orchestra/testbench": "^6.13|^7.1|^8.0",
-        "phpunit/phpunit": "^8.0|^9.0",
+        "phpunit/phpunit": "^9.5",
         "roave/security-advisories": "dev-latest",
-        "vimeo/psalm": "^5.6"
+        "vimeo/psalm": "^5.25"
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
     "extra": {
         "laravel": {
             "providers": [
