--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "ext-json": "*",
         "ext-pcntl": "*",
         "bensampo/laravel-enum": "^2.1|^3.0|^4.0|^5.0|^6.0",
-        "laravel/framework": "^v8.37|^9.0|^10.0",
+        "laravel/framework": "^v8.37|^9.0|^10.0|^11.0",
         "nesbot/carbon": "^2.0|^3.0"
     },
     "require-dev": {
