--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,11 @@
         "laravel"
     ],
     "require": {
-        "php": "8.1.*|8.2.*|8.3.*",
+        "php": "8.2.*|8.3.*|8.4.*",
         "ext-json": "*",
         "ext-pcntl": "*",
-        "bensampo/laravel-enum": "^2.1|^3.0|^4.0|^5.0|^6.0",
-        "laravel/framework": "^v8.37|^9.0|^10.0|^11.0",
+        "bensampo/laravel-enum": "^3.0|^4.0|^5.0|^6.0",
+        "laravel/framework": "^9.0|^10.0|^11.0",
         "nesbot/carbon": "^2.0|^3.0"
     },
     "require-dev": {
@@ -29,7 +29,7 @@
         "orchestra/testbench": "^6.13|^7.1|^8.0",
         "phpunit/phpunit": "^9.5",
         "roave/security-advisories": "dev-latest",
-        "vimeo/psalm": "^5.25"
+        "vimeo/psalm": "^6.0"
     },
     "extra": {
         "laravel": {
@@ -52,9 +52,9 @@
         }
     },
     "scripts": {
-        "lint": "php8.1 vendor/bin/pint --test",
-        "lint-fix": "php8.1 vendor/bin/pint",
-        "analyze": "php8.1 vendor/bin/psalm --php-version=8.1 --no-cache",
+        "lint": "php8.2 vendor/bin/pint --test",
+        "lint-fix": "php8.2 vendor/bin/pint",
+        "analyze": "php8.2 vendor/bin/psalm --php-version=8.2 --no-cache",
         "pint": "vendor/bin/pint",
         "psalm": "vendor/bin/psalm --no-cache --threads=8 --output-format=phpstorm"
     }
