--- a/composer.json
+++ b/composer.json
@@ -20,14 +20,14 @@
         "ext-json": "*",
         "ext-pcntl": "*",
         "bensampo/laravel-enum": "^3.0|^4.0|^5.0|^6.0",
-        "laravel/framework": "^9.0|^10.0|^11.0",
+        "laravel/framework": "^9.0|^10.0|^11.0|^12.0",
         "nesbot/carbon": "^2.0|^3.0"
     },
     "require-dev": {
         "laravel/pint": "^1.16",
         "mockery/mockery": "^1.6",
-        "orchestra/testbench": "^6.13|^7.1|^8.0",
-        "phpunit/phpunit": "^9.5",
+        "orchestra/testbench": "^6.13|^7.1|^8.0|^9.0|^10.0",
+        "phpunit/phpunit": "^9.5|^10.5|^11.5",
         "roave/security-advisories": "dev-latest",
         "vimeo/psalm": "^6.0"
     },
